# toolshop

./: README.md  pyproject.toml
tests/: conftest.py
tests/agent/: basic_test.py  conftest.py  helpers.py
tests/agent/fixme/: doubly_linked_list_broken.py
tests/agent/reasoning/: test_advanced_file_system_reasoning.py  test_file_system_reasoning.py
tests/coder/: basic_test.py
tests/coder/fixme/: merge_sort_broken.py
tests/coder/reasoning/: test_advanced_file_system_reasoning.py  test_file_system_reasoning.py
tests/tools/: test_base.py  test_compat.py  test_data.py  test_file.py  test_terminal.py
toolshop/: __init__.py  base.py  data.py  file.py  gcp.py  meta.py  terminal.py
toolshop/agent/: agent.py  cli.py  coder.py  instructions.py
toolshop/cli/: cli.py
toolshop/core/: base.py  logging.py  meta.py
toolshop/tools/: data.py  file.py  gcp.py  misc.py  terminal.py
