[tool.poetry]
name = "toolshop"
version = "0.1.4"
description = "A Tool Framework for AI Agents"
authors = ["Andrew Hannigan <Andrew.S.Hannigan@Gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
sqlalchemy = "^2.0.29"
httpx = "^0.27.0"
click = "^8.1.7"
marvin = "^2.3.6"
ascii-graph = "^1.5.1"
sqlalchemy-bigquery = "^1.11.0"
google-cloud-bigquery-storage = "^2.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[tool.poetry.scripts]
ts = "toolshop.cli.cli:toolshop"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

